2003-03-20 Roberto Raggi <roberto@kdevelop.org>
	* improved code completion

2003-03-19 Caleb Tennis <caleb@aei-tech.com>
	* Tagged Alpha 4

2003-03-18 Caleb Tennis <caleb@aei-tech.com>
	* Modified IDEAl panel layouts to be a little smarter (hopefully)
	* Committed patches by Amilcar do Carmo Lucas

2003-03-18 Roberto Raggi <roberto@kdevelop.org>
	* added the new "Add Methods" wizard
	* added the new "Add Attributes" wizard

2003-03-15 F@lk Brettschneider <falkbr@kdevelop.org>
	* applied patch of Jens Zurheide (jens.zurheide@gmx.de) that fixes some bugs

2003-03-13 Alexander Dymo <cloudtemple@mksat.net>
	* DevHelp documentation support for KDevelop.
	  All documentation collections for GNU/GNOME developers from
	  http://lidn.sourceforge.net/ are supported. Existing DevHelp
	  installation can also be scanned for documentation.

2003-03-13 Julian Rockey <linux@jrockey.com>
	* CTRL-/ does buffer switching, emacs-style

2003-03-11 Julian Rockey <linux@jrockey.com>
	* parts/filecreate
	  - finally got round to replacing file dialog with smaller, leaner widget

2003-03-11 Caleb Tennis <caleb@aei-tech.com>
	* added library version number support for QMake project

2003-03-10 Caleb Tennis <caleb@aei-tech.com>
	* added "staticlib" support for QMake projects

2003-03-09 Roberto Raggi <roberto@kdevelop.org>
	* added back/forward actions for the documentation browser

2003-03-07 Alexander Dymo <cloudtemple@mksat.net>
    * New configuration options for the documentation browser.
      It is now capable of using any doxygen and kdoc documentation,
      not only kdelibs documentation.

2003-03-07 F@lk Brettschneider <falkbr@kdevelop.org>
	* added third level called "Very short compiler output"
	* now you can switch between the output versions without recompiling

2003-03-06 Stephane ANCELOT <sancelot@free.fr>
	* enhanced grepview, there is no need to display the filename in each line

2003-03-06 Roberto Raggi <roberto@kdevelop.org>
	* Added support for tmake projects